<resources>
    <string name="app_name">File Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="back_to_parent_folder">Back to parent folder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_none_time_string">--:--</string>
    <string name="app_all_permission_group">StorageManagement</string>
    <string name="welcome_to_filemanager">Welcome to FileManager</string>
    <string name="play_or_pause">Play or Pause</string>
    <string name="toggle_playing_in_loop">Toggle playing in loop</string>
    <string name="date_modified_ascending">Date Modified</string>
    <string name="size_descending">Size (Descending)</string>
    <string name="date_modified_descending">Date Modified (Descending)</string>
    <string name="apply">Apply</string>
    <string name="size_ascending">Size</string>
    <string name="name_descending">Name (Descending)</string>
    <string name="name_ascending">Name</string>
    <string name="file_icons">File Icons</string>
    <string name="select_sort_option">Select sort option</string>

    <!-- New strings for rename functionality -->
    <string name="rename">Rename</string>
    <string name="rename_file">Rename File</string>
    <string name="new_name">New name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="rename_success">File renamed successfully.</string>
    <string name="rename_failed">Failed to rename file.</string>
    <string name="file_options">File options</string>
    <string name="minimize">Minimize</string>
    <string name="expand_player">Expand player</string>
    <string name="music_library">Music Library</string>
    <string name="create_folder">Create Folder</string>
    <string name="folder_name">Folder Name</string>
    <string name="create">Create</string>
    <string name="folder_creation_success">Folder created successfully.</string>
    <string name="folder_creation_failed">Failed to create folder.</string>
    <string name="move">Move</string>
    <string name="move_to_playlist">Move to Playlist</string>
    <string name="move_to_another_playlist">Move to Another Playlist</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="move_success">File moved successfully.</string>
    <string name="move_failed">Failed to move file.</string>
    <string name="remove_from_playlist">Remove from Playlist</string>
    <string name="play_playlist">Play Playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="play_all">Play All</string>
    <string name="open_playlist">Open Playlist</string>
    <string name="remove_from_playlist_confirm">Remove this song from the playlist?</string>
    <string name="delete_playlist_confirm">Delete this playlist and all its songs?</string>
    <string name="remove_success">Song removed from playlist.</string>
    <string name="remove_failed">Failed to remove song.</string>
    <string name="delete_playlist_success">Playlist deleted.</string>
    <string name="delete_playlist_failed">Failed to delete playlist.</string>
    <string name="no_audio_files">No audio files found in this folder.</string>
    <string name="widget_description">Music player controls for your home screen</string>
    <string name="widget_label">Music Player</string>
    <string name="widget_no_track">Tap ▶ to play</string>

</resources>
