<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainAppBar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/appbar_background"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/mainActivityBackButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_to_parent_folder"
            android:padding="8dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/appBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="File Explorer"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textStyle="bold"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mainActivityBackButton"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/japCounterButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Jap Counter"
            android:padding="8dp"
            android:src="@drawable/ic_jap_counter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/libraryButton"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnSurface" />

        <ImageButton
            android:id="@+id/libraryButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/music_library"
            android:padding="8dp"
            android:src="@drawable/ic_library_music_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sortButton"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnSurface" />

        <ImageButton
            android:id="@+id/sortButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_to_parent_folder"
            android:padding="8dp"
            android:src="@drawable/baseline_sort_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnSurface" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:foregroundGravity="center_vertical"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainAppBar">

        <LinearLayout
            android:id="@+id/fileTreeLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- This content is replaced dynamically by MainActivity -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2sp"
                android:layout_weight="1"
                android:paddingHorizontal="5sp"
                android:text="Home"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />


        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:clipToPadding="false"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <include
        android:id="@+id/musicCard"
        layout="@layout/music_card_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="Create Folder"
        android:src="@drawable/baseline_add_24"
        app:backgroundTint="?attr/colorPrimaryContainer"
        app:tint="?attr/colorOnPrimaryContainer"
        app:layout_constraintBottom_toTopOf="@+id/musicCard"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/playAllButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/play_all"
        android:src="@drawable/baseline_play_circle_outline_24"
        android:visibility="gone"
        app:backgroundTint="?attr/colorSecondaryContainer"
        app:tint="?attr/colorOnSecondaryContainer"
        app:layout_constraintBottom_toBottomOf="@+id/addFab"
        app:layout_constraintEnd_toStartOf="@+id/addFab"
        app:layout_constraintTop_toTopOf="@+id/addFab"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
